# DB25

./: .gitignore  CMakeLists.txt  CTE_ARCHITECTURE_GAP.md  CTE_COMPREHENSIVE_EVALUATION.md  CTE_TODO_LIST.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  TODO_BOUND_STATEMENTS.md  TODO_QUERY_OPTIMIZERS.md  WORLDS_MOST_COMPLEX_SQL_QUERIES.md  WORLDS_MOST_COMPLEX_SQL_QUERIES_PART2.md  WORLDS_MOST_COMPLEX_SQL_QUERIES_PART3.md  chnagelogs.txt  debug_cte_specific.cpp  debug_join_ast.cpp  install_libpg_query.sh  integration_plan.md  projection_enhancement_suggestion.cpp
debug/: debug_and_conditions.cpp  debug_ast.cpp  debug_bool_only.cpp  debug_boolean_expr.cpp  debug_column_error.cpp  debug_complex_where_plan.cpp  debug_direct_binder.cpp  debug_error_suggestions.cpp  debug_integration_issue.cpp  debug_integration_verbose.cpp  debug_parse_trace.cpp  debug_scan_node_creation  debug_scan_node_creation.cpp  debug_select_ast.cpp  debug_select_binding.cpp  debug_select_star.cpp  debug_table_ast_parsing  debug_table_ast_parsing.cpp  debug_table_scan_node.cpp  debug_targetlist_parsing.cpp  debug_where_ast  debug_where_ast.cpp  debug_where_clause.cpp  debug_where_parsing.cpp
docs/: README.md  build_pdf.sh  flier.md  query_engine_architecture.tex
docs/QnA/: CONTRIBUTION.md  WHY_DUAL_STORAGE.txt
examples/: main.cpp  physical_demo.cpp  planning_demo.cpp
include/: bound_statement.hpp  database.hpp  logical_plan.hpp  pg_query.h  pg_query_wrapper.hpp  physical_plan.hpp  physical_planner.hpp  query_executor.hpp  query_planner.hpp  sample_schema.hpp  schema_registry.hpp  simple_schema.hpp
release-notes/: RELEASE_NOTES_AST_ORDER_BY.md  RELEASE_NOTES_AST_PROJECTIONS.md
src/: database.cpp  logical_plan.cpp  pg_query_wrapper.cpp  physical_plan.cpp  physical_planner.cpp  query_executor.cpp  query_planner.cpp  schema_binder.cpp  schema_registry.cpp  simple_schema.cpp
tests/: debug_schema_binder.cpp  test_all.cpp  test_ast_join_conditions.cpp  test_ast_projections_simple.cpp  test_bound_statement_integration.cpp  test_cte_comprehensive.cpp  test_database.cpp  test_insert_ast_comprehensive.cpp  test_logical_planner.cpp  test_physical_execution.cpp  test_physical_planner.cpp  test_query_executor.cpp  test_query_parser.cpp  test_schema_binder.cpp  test_schema_registry.cpp  test_where_ast.cpp  test_worlds_most_complex_sql.cpp
